# openclaw-manager

./: .gitignore  .openclaw-skill.md  README.md  package-lock.json
architecture/: openclaw.base.json
docs/: SYSTEM_ANALYSIS.html  SYSTEM_ANALYSIS.md
playbooks/: gateway-restart.json  whatsapp-reconnect.json  wsl-reset.json
project-knowledge/: Obsidian Guide.md  architecture.md  current-status.md  debugging-guide.md  decisions.md  frontend.md  github-setup.md  index.md  known-issues.md  roadmap.md  rust-backend.md
project-knowledge/.obsidian/: app.json  appearance.json  graph.json
src/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/frontend/src/: App.tsx  firebase-config.ts  styles.css
src/frontend/src/pages/: AIAssistant.tsx  Channels.tsx  Dashboard.tsx  Logs.tsx  ModelMonitor.tsx  Settings.tsx  SetupWizard.tsx
src/installer/: build_windows.bat  wsl_install.ps1
src/oclaw-agent/: maintenance-agent.json
src/tauri-backend/: Cargo.toml  tauri.conf.json
src/tauri-backend/icons/: icon.icns
src/tauri-backend/src/: ai_client.rs  app_state.rs  device.rs  diagnostics.rs  firebase_auth.rs  firebase_config.json  lib.rs  main.rs  maintenance_agent.rs  oc_client.rs  orchestrator.rs  setup.rs  speed.rs  wsl_bridge.rs
