[package]
name = "openclaw-manager"
version = "0.2.0"
description = "OpenClaw Manager - Windows Desktop App"
authors = ["Ahmed"]
edition = "2021"

[lib]
name = "openclaw_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
dirs = "5"
url = "2"
log = "0.4"
env_logger = "0.11"
thiserror = "2"
whoami = "1"
tauri-plugin-log = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "openclaw-manager"
path = "src/main.rs"
